0024922: ShapeAnalysis_Wire::CheckIntersectingEdges doesn't report an intersection point if it is inside of tolerance even only on edge

Fix the tolerances check for an intersection point in ShapeAnalysis_Wire::CheckIntersectingEdges